Refactor question structure in JSON files and update related code
- Changed `prompt` to `questionImage` in various test JSON files to standardize question formatting.
- Updated validation logic in the admin API to check for `questionImage` instead of `prompt`.
- Adjusted HTML forms and JavaScript to reflect the new question structure, ensuring consistency across the application.
- Enhanced README documentation to clarify the new question format requirements.

--- a/public/admin.html
+++ b/public/admin.html
@@ -75,7 +75,7 @@
         </div>
         <form class="question-form" data-question-form>
           <div class="form-field">
-            <label>질문 내용 <input type="text" name="prompt" required /></label>
+            <label>질문 내용 <input type="text" name="questionImage" required /></label>
           </div>
           <div class="answer-grid">
             <fieldset>
