--- a/public/admin.html
+++ b/public/admin.html
@@ -157,7 +157,7 @@
   </div>
 
   <script src="./scripts/config.js"></script>
-  <script type="module" src="./scripts/admin.js"></script>
+  <script type="module" src="./scripts/admin.js" crossorigin="anonymous"></script>
 </body>
 
 </html>
