--- a/public/index.html
+++ b/public/index.html
@@ -129,4 +129,4 @@
 
 </html>
 
-<script type="module" src="./scripts/main.js"></script>
+<script type="module" src="./scripts/main.js" crossorigin="anonymous"></script>
