--- a/public/testlist.html
+++ b/public/testlist.html
@@ -94,4 +94,4 @@
 
 </html>
 
-<script type="module" src="./scripts/testlist.js"></script>
+<script type="module" src="./scripts/testlist.js" crossorigin="anonymous"></script>
