--- a/public/testquiz.html
+++ b/public/testquiz.html
@@ -61,4 +61,4 @@
   </div>
 </body>
 
-<script type="module" src="./scripts/testquiz.js"></script>
+<script type="module" src="./scripts/testquiz.js" crossorigin="anonymous"></script>
