--- a/public/testresult.html
+++ b/public/testresult.html
@@ -97,4 +97,4 @@
     </div>
 </body>
 
-<script type="module" src="./scripts/testresult.js"></script>
+<script type="module" src="./scripts/testresult.js" crossorigin="anonymous"></script>
