Update script tags in HTML files to include data-cfasync attribute
- Added `data-cfasync="false"` to script tags in admin.html, index.html, testintro.html, testlist.html, testquiz.html, and testresult.html to improve compatibility with Cloudflare's Rocket Loader and ensure proper script execution order.

--- a/public/index.html
+++ b/public/index.html
@@ -129,4 +129,4 @@
 
 </html>
 
-<script type="module" src="./scripts/main.js" crossorigin="anonymous"></script>
+<script type="module" src="./scripts/main.js" data-cfasync="false"></script>
