--- a/public/testresult.html
+++ b/public/testresult.html
@@ -33,7 +33,7 @@
     <link rel="stylesheet" href="styles/testintro.css">
     <link rel="stylesheet" href="styles/testresult.css">
     <link rel="shortcut icon" data-asset-href="assets/images/favicon.png" type="image/x-icon">
-    <script src="./scripts/config.js" defer></script>
+  <script src="./scripts/config.js" defer data-cfasync="false"></script>
 </head>
 
 <body>
@@ -97,4 +97,4 @@
     </div>
 </body>
 
-<script type="module" src="./scripts/testresult.js" crossorigin="anonymous"></script>
+<script type="module" src="./scripts/testresult.js" data-cfasync="false"></script>
