Refactor asset loading and update script tags for improved performance
- Removed `data-cfasync="false"` from script tags in admin.html, index.html, testintro.html, testlist.html, testquiz.html, and testresult.html to enhance compatibility with Cloudflare's Rocket Loader.
- Added `crossorigin="anonymous"` to script tags for better security and resource loading.
- Updated image URLs in CSS and HTML to utilize a CDN with resizing options for optimized loading and performance.

--- a/public/admin.html
+++ b/public/admin.html
@@ -156,8 +156,8 @@
     </main>
   </div>
 
-  <script src="./scripts/config.js" data-cfasync="false"></script>
-  <script type="module" src="./scripts/admin.js" data-cfasync="false"></script>
+  <script src="./scripts/config.js"></script>
+  <script type="module" src="./scripts/admin.js" crossorigin="anonymous"></script>
 </body>
 
 </html>
