--- a/public/testintro.html
+++ b/public/testintro.html
@@ -32,7 +32,7 @@
   <link rel="stylesheet" href="styles/main.css">
   <link rel="stylesheet" href="styles/testintro.css">
   <link rel="shortcut icon" data-asset-href="assets/images/favicon.png" type="image/x-icon">
-  <script src="./scripts/config.js" defer data-cfasync="false"></script>
+  <script src="./scripts/config.js" defer></script>
 </head>
 
 <body>
@@ -109,4 +109,4 @@
   </div>
 </body>
 
-<script type="module" src="./scripts/testintro.js" data-cfasync="false"></script>
+<script type="module" src="./scripts/testintro.js" crossorigin="anonymous"></script>
