--- a/public/testlist.html
+++ b/public/testlist.html
@@ -32,7 +32,7 @@
   <link rel="stylesheet" href="styles/main.css">
   <link rel="stylesheet" href="styles/testlist.css">
   <link rel="shortcut icon" data-asset-href="assets/images/favicon.png" type="image/x-icon">
-  <script src="./scripts/config.js" defer data-cfasync="false"></script>
+  <script src="./scripts/config.js" defer></script>
 </head>
 
 <body>
@@ -94,4 +94,4 @@
 
 </html>
 
-<script type="module" src="./scripts/testlist.js" data-cfasync="false"></script>
+<script type="module" src="./scripts/testlist.js" crossorigin="anonymous"></script>
