--- a/public/testquiz.html
+++ b/public/testquiz.html
@@ -31,7 +31,7 @@
   <link rel="stylesheet" href="styles/reset.css">
   <link rel="stylesheet" href="styles/testquiz.css">
   <link rel="shortcut icon" data-asset-href="assets/images/favicon.png" type="image/x-icon">
-  <script src="./scripts/config.js" defer data-cfasync="false"></script>
+  <script src="./scripts/config.js" defer></script>
 </head>
 
 <body>
@@ -61,4 +61,4 @@
   </div>
 </body>
 
-<script type="module" src="./scripts/testquiz.js" data-cfasync="false"></script>
+<script type="module" src="./scripts/testquiz.js" crossorigin="anonymous"></script>
