Update admin interface to include ID and name attributes for test selection dropdown
- Added `id` and `name` attributes to the test selection dropdown for improved accessibility and form handling.
- Enhanced the clarity of the dropdown element, facilitating better integration with JavaScript functionality.

--- a/public/admin.html
+++ b/public/admin.html
@@ -22,7 +22,7 @@
         <div class="admin-header__controls">
           <label class="form-field form-field--inline">
             <span>테스트 선택</span>
-            <select data-test-select aria-label="현재 편집할 테스트 선택"></select>
+            <select id="testSelect" name="testSelect" data-test-select aria-label="현재 편집할 테스트 선택"></select>
           </label>
           <button class="ds-button ds-button--secondary" type="button" data-create-test>
             새 테스트
