--- a/public/testquiz.html
+++ b/public/testquiz.html
@@ -51,7 +51,7 @@
         </div>
       </div>
       <div class="TestImg">
-        <img src="#" alt="테스트 이미지">
+        <img alt="테스트 이미지">
       </div>
       <div class="TestSelectBtn">
         <button type="button" class="select1"></button>
