--- a/public/testresult.html
+++ b/public/testresult.html
@@ -54,7 +54,7 @@
         </header>
         <main class="ResultShell">
             <div class="ResultShellImg">
-                <img src="#" alt="결과 이미지">
+                <img alt="결과 이미지">
             </div>
             <div class="ResultShellTextBox">
                 <div class="ResultBtnShell">
