--- a/public/testintro.html
+++ b/public/testintro.html
@@ -53,7 +53,7 @@
     </header>
     <main class="TestIntroShell">
       <div class="IntroShellImg">
-        <img src="#" alt="테스트 썸네일">
+        <img alt="테스트 썸네일">
         <div class="NewTestHashTag">
           <span class="HashTag">#태그</span>
         </div>
@@ -61,7 +61,7 @@
       <div class="IntroShellTextBox">
         <h2>테스트 이름</h2>
         <div class="Creator">
-          <img src="#" alt="제작자 이미지">
+          <img alt="제작자 이미지">
           <p class="CreatorName">
             제작자 이름
           </p>
