--- a/public/testlist.html
+++ b/public/testlist.html
@@ -56,7 +56,7 @@
         <div class="NewTestListShell">
           <div class="NewTestShell test1">
             <div class="NewTest">
-              <img src="#" alt="테스트 이미지">
+              <img alt="테스트 이미지">
               <h4>테스트 이름</h4>
               <div class="NewTestHashTag">
                 <span class="HashTag">#태그</span>
